<resources>
    <string name="app_name">MEET App</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">MEET App</string>
    <string name="nav_header_subtitle" translatable="false">Bahia Software</string>
    <string name="action_settings">Settings</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_news">News</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_configuracion">Settings</string>
    <string name="title_activity_login">Log in</string>
    <string name="chat_professional">Professional</string>
    <string name="title_activity_chat">Chat</string>
    <string name="nav_login">Log In</string>
    <string name="nav_patient_data">Patient data</string>
    <string name="nav_feedback" translatable="false">Feedback</string>
    <string name="nav_notifications">Notifications</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_patientdata">Patient data</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="hint_write_message">Write a message</string>
    <string name="limit_data">Limit data</string>
    <string name="actual_state">Actual state</string>
    <string name="previous_state">Previous state</string>
    <string name="later_state">Later state</string>
    <string name="temporal_progress">Temporal progress</string>
    <string name="days">Days</string>
    <string name="covered">Covered</string>
    <string name="not_covered">Not covered</string>
    <string name="draft">Draft</string>
    <string name="send">Send</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="loading">Loading</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="nav_logout">Log out</string>
    <string name="logout_warning_title">Are you sure you want to log out?</string>
    <string name="logout_warning_text">This decision can not be undone. All local data will be deleted. The data stored on the server will not be lost. These data will be downloaded when you log in again.</string>
    <string name="title_activity_logout">Log out</string>
    <string name="required">Required</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="you_have">You have</string>
    <string name="pending_messages">pending messages</string>
    <string name="notifications_general_channel_id" translatable="false">MEET App - General</string>
    <string name="notifications_general_channel_name">External</string>
    <string name="notifications_general_channel_description">External notifications</string>
    <string name="notifications_chat_channel_id" translatable="false">MEET App - Chat</string>
    <string name="notifications_chat_channel_name">Chat</string>
    <string name="notifications_chat_channel_description">Chat notifications</string>
    <string name="notifications_calendar_channel_id" translatable="false">MEET App - Calendar</string>
    <string name="notifications_calendar_channel_name">Calendar</string>
    <string name="notifications_calendar_channel_description">Calendar notifications</string>
    <string name="notifications_feedback_channel_id" translatable="false">MEET App - Feedback</string>
    <string name="notifications_feedback_channel_name">Feedback</string>
    <string name="notifications_feedback_channel_description">Feedback notifications</string>
    <string name="notifications_patientdata_channel_id" translatable="false">MEET App - Patient Data</string>
    <string name="notifications_patientdata_channel_name">Patient Data</string>
    <string name="notifications_patientdata_channel_description">Patient Data notifications</string>
    <string name="location">Location</string>
    <string name="title_activity_feedbacks">Feedbacks</string>
    <string name="title_activity_event">Event</string>
    <string name="not_notification_configured">There\'s no notification configured</string>
</resources>
